# merchan_sales

./: README.md  app.py  duckdb.py  ploty.py  pydeck.py  pyproject.toml  stramlitpydeck.py  streamlit.py
data/: merchandise-sales.csv
db/: duckdb.py  duckdb2.py
test/: pyproject.toml
