[project]
name = "merchan_sale"
version = "0.1.0"
description = ""
authors = [
    {name = "OJ",email = "orlandojunior.py@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "pydeck (>=0.9.1,<0.10.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "plotly (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
